--- a/04_Shop_multiProduct/Views/Home/Index.cshtml
+++ b/04_Shop_multiProduct/Views/Home/Index.cshtml
@@ -19,6 +19,7 @@
         </div>
 }
 <div class="container">
+    <h1 class="hidden">@commonInfo.Desc</h1>
     @if (showLeftColumn)
     {
         <div class="row">
