update seo thêm 4
update seo thêm 4

--- a/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
         <link href="/assets/lib/jquery-bxslider/jquery-bxslider.css" rel="stylesheet" />
     }
     <link rel="shortcut icon" href="@commonInfo.Logo" type="image/x-icon">
-
+    
     <link rel="stylesheet" type="text/css" href="/assets/css/@(themeOptionText+".css")" />
     <link rel="dns-prefetch" href="//v2.zopim.com/">
     <link rel="dns-prefetch" href="//www.google-analytics.com/">
@@ -51,7 +51,7 @@
     <link rel="dns-prefetch" href="//www.facebook.com/">
     <link href='/static/css' rel='stylesheet' type='text/css'>
     @*<link href="/assets/css/blue-style.css" rel="stylesheet" />*@
-    <link href="/assets/css/Green-style.css" rel="stylesheet" />
+    @*<link href="/assets/css/Green-style.css" rel="stylesheet" />*@
 
 </head>
 <body class="@themeOptionText">
