--- a/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
     <link rel="dns-prefetch" href="//fonts.googleapis.com/">
     <link rel="dns-prefetch" href="//www.facebook.com/">
     <link href='/static/css' rel='stylesheet' type='text/css'>
-    @*<link href="/assets/css/blue-style.css" rel="stylesheet" />*@
+    <link href="/assets/css/blue-style.css" rel="stylesheet" />
     @*<link href="/assets/css/Green-style.css" rel="stylesheet" />*@
 
 </head>
@@ -81,7 +81,6 @@
                                 </div>
                                 <div id="navbar" class="navbar-collapse collapse">
                                     <ul class="nav navbar-nav">
-
                                         @if (commonInfo.MenuList != null)
                                         {
                                             for (int i = 0; i < commonInfo.MenuList.Length; i++)
@@ -112,9 +111,7 @@
                                                 }
                                             }
                                         }
-
                                     </ul>
-
                                 </div>
                             </div>
                         </nav>
