--- a/06_Shop_Onepage/Views/Shared/_Layout.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_Layout.cshtml
@@ -30,6 +30,10 @@
     @RenderSection("health", required: false)
     <meta property="og:site_name" content="@commonInfo.Name">
 
+    <link rel="shortcut icon" href="@commonInfo.Logo" />
+    <meta property="og:image:type" content="image/jpg">    
+    <meta property="og:site_name" content="@commonInfo.Name">
+
 </head>
 <body>
 
