--- a/04_Shop_multiProduct/Views/Product/Checkout.cshtml
+++ b/04_Shop_multiProduct/Views/Product/Checkout.cshtml
@@ -266,7 +266,7 @@
                                 <th>Thông tin</th>
                                 <th>Tình trạng.</th>
                                 <th>Đơn giá</th>
-                                <th>Số lượng</th>
+                                <th>Trọng lượng /kg</th>
                                 <th>Tổng</th>
                                 <th class="action"><i class="fa fa-trash-o"></i></th>
                             </tr>
